--- a/Tutorial/Calculation/Disc4_Robin.ipynb
+++ b/Tutorial/Calculation/Disc4_Robin.ipynb
@@ -32,17 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/yanjun/.local/lib/python3.10/site-packages/matplotlib/projections/__init__.py:63: UserWarning: Unable to import Axes3D. This may be due to multiple versions of Matplotlib being installed (e.g. as a system package and as a pip package). As a result, the 3D projection is not available.\n",
-      "  warnings.warn(\"Unable to import Axes3D. This may be due to multiple versions of \"\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +188,7 @@
      "text": [
       "<class 'numpy.float64'>\n",
       "[]\n",
-      "<dolfinx.fem.bcs.DirichletBC object at 0x70ad9c80a440>\n"
+      "<dolfinx.fem.bcs.DirichletBC object at 0x791628809210>\n"
      ]
     }
    ],
@@ -215,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,11 +283,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5767\n",
+      "5950\n",
+      "[ 10  10  10 ... 190 190 190]\n",
+      "[    3    11    17 ... 82553 82561 82571]\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "#print(facet_indices)\n",
+    "boundary19= (190, lambda x: (x[0])**2 + (x[1])**2 <= 320**2)\n",
+    "boundaries1 = boundaries + [boundary19]\n",
+    "\n",
+    "facet_indices1, facet_markers1 = [], [] \n",
+    "fdim = domain.topology.dim - 1  \n",
+    "for (marker, locator) in boundaries1:\n",
+    "    facets = locate_entities(domain, fdim, locator)\n",
+    "    facet_indices1.append(facets)\n",
+    "    facet_markers1.append(np.full_like(facets, marker))\n",
+    "    \n",
+    "facet_indices1 = np.hstack(facet_indices1).astype(np.int32)\n",
+    "facet_markers1 = np.hstack(facet_markers1).astype(np.int32)\n",
+    "\n",
+    "bc_disc1 = mesh.locate_entities_boundary(\n",
+    "    domain, fdim , lambda x:  np.isclose(x[2], 20) )\n",
+    "facet_indices1 = np.intersect1d(bc_disc1, facet_indices1)\n",
+    "print(len(facet_indices1))\n",
+    "print(len(bc_disc1))\n",
+    "print(facet_markers1)\n",
+    "print(facet_indices1)"
    ]
   },
   {
