--- a/Tutorial/Fun_practice.ipynb
+++ b/Tutorial/Fun_practice.ipynb
@@ -1473,8 +1473,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "2a233660-6cd9-4adc-9d31-841637c80946",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Common indices between A and C: [ 3  4  6 15 91]\n",
+      "New marker is:  [31 42 56  1  9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Assuming A, B, and C are your matrices\n",
+    "A = np.array([[15, 121, 3],\n",
+    "              [4, 85, 6],\n",
+    "              [78, 8, 91]])\n",
+    "\n",
+    "B = np.array([[1, 2, 31],\n",
+    "              [42, 5, 56],\n",
+    "              [7, 8, 9]])\n",
+    "\n",
+    "C = np.array([[91, 20, 7],\n",
+    "              [6, 15, 4],\n",
+    "              [3, 12, 1]])\n",
+    "\n",
+    "common_indices = np.intersect1d(A, C)\n",
+    "D = []\n",
+    "for index in common_indices:\n",
+    "    rows_A, cols_A = np.where(A == index)\n",
+    "    D.append( B[rows_A, cols_A] )\n",
+    "D = np.concatenate(D)\n",
+    "\n",
+    "print(\"Common indices between A and C:\", common_indices)\n",
+    "print(\"New marker is: \",D)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e0c91608-b38b-4baf-ace1-2de407071a06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3  4  6 15 91 31 42 56  1  9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "E = [common_indices,  D]\n",
+    "E = np.concatenate(E)\n",
+    "\n",
+    "print(E)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb6c4a2e-3d3b-44df-bd03-42c7cf0d2b40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e47a9dc-adab-45f0-8b28-d5836e5dfd01",
    "metadata": {},
    "outputs": [],
    "source": []
