--- a/Tutorial/Official/membrane_code.ipynb
+++ b/Tutorial/Official/membrane_code.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "text": [
       "Info    : Meshing 1D...\n",
       "Info    : Meshing curve 1 (Ellipse)\n",
-      "Info    : Done meshing 1D (Wall 0.000145269s, CPU 0.000124s)\n",
+      "Info    : Done meshing 1D (Wall 0.00164574s, CPU 0.000778s)\n",
       "Info    : Meshing 2D...\n",
       "Info    : Meshing surface 1 (Plane, Frontal-Delaunay)\n",
-      "Info    : Done meshing 2D (Wall 0.0658964s, CPU 0.064494s)\n",
+      "Info    : Done meshing 2D (Wall 0.0912194s, CPU 0.063615s)\n",
       "Info    : 1550 nodes 3099 elements\n"
      ]
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,15 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<dolfinx.mesh.MeshTags object at 0x700afff51e10>\n",
-      "<dolfinx.mesh.MeshTags object at 0x700afff520e0>\n"
+      "<dolfinx.mesh.MeshTags object at 0x7c7c5c0ddff0>\n",
+      "<dolfinx.mesh.MeshTags object at 0x7c7c5c0ddf00>\n"
      ]
     }
    ],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,9 +213,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "boundary_dofs1 is \n",
+      " [   1    3    9   12   13   20   37   43   59   65   79   88  112  128\n",
+      "  140  167  188  203  233  256  274  325  346  400  407  431  486  516\n",
+      "  574  606  669  702  764  770  776  782  788  824  864  907  913  952\n",
+      "  990 1041 1083 1120 1174 1219 1253 1311 1359 1447 1498 1580 1637 1717\n",
+      " 1777 1854 1919 1995 2061 2131 2202 2270 2341 2409 2480 2548 2619 2687\n",
+      " 2758 2826 2897 2961 3032 3097 3167 3182 3229 3303 3356 3428 3483 3554\n",
+      " 3606 3673 3683 3685 3725 3800 3801 3802 3803 3804 3831 3897 3898 3924\n",
+      " 3985 4010 4070 4093 4148 4168 4220 4241 4287 4306 4349 4350 4363 4399\n",
+      " 4412 4443 4444 4452 4480 4485 4501 4502 4507 4511 4517 4518 4519 4520]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from dolfinx import fem, mesh, io, plot, default_scalar_type\n",
@@ -237,14 +254,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[   0    2    3    5    6   11   13   18   20   25   28   36   41   45\n",
+      "boundary_dofs is \n",
+      " [   0    2    3    5    6   11   13   18   20   25   28   36   41   45\n",
       "   54   61   66   76   84   90  107  114  132  134  142  161  171  190\n",
       "  201  222  233  254  256  258  260  262  274  288  302  304  317  330\n",
       "  347  361  374  392  407  419  438  454  484  501  529  548  575  595\n",
@@ -253,7 +271,18 @@
       " 1239 1243 1244 1258 1284 1285 1286 1287 1288 1297 1320 1321 1330 1351\n",
       " 1360 1381 1389 1408 1415 1433 1441 1457 1464 1479 1480 1485 1498 1503\n",
       " 1514 1515 1518 1528 1530 1536 1537 1540 1542 1545 1546 1547 1548 1549]\n",
-      "[   0    2    3    5    6   11   13   18   20   25   28   36   41   45\n",
+      "boundary_dofs1 is \n",
+      " [   1    3    9   12   13   20   37   43   59   65   79   88  112  128\n",
+      "  140  167  188  203  233  256  274  325  346  400  407  431  486  516\n",
+      "  574  606  669  702  764  770  776  782  788  824  864  907  913  952\n",
+      "  990 1041 1083 1120 1174 1219 1253 1311 1359 1447 1498 1580 1637 1717\n",
+      " 1777 1854 1919 1995 2061 2131 2202 2270 2341 2409 2480 2548 2619 2687\n",
+      " 2758 2826 2897 2961 3032 3097 3167 3182 3229 3303 3356 3428 3483 3554\n",
+      " 3606 3673 3683 3685 3725 3800 3801 3802 3803 3804 3831 3897 3898 3924\n",
+      " 3985 4010 4070 4093 4148 4168 4220 4241 4287 4306 4349 4350 4363 4399\n",
+      " 4412 4443 4444 4452 4480 4485 4501 4502 4507 4511 4517 4518 4519 4520]\n",
+      "locate_dofs is \n",
+      " [   0    2    3    5    6   11   13   18   20   25   28   36   41   45\n",
       "   54   61   66   76   84   90  107  114  132  134  142  161  171  190\n",
       "  201  222  233  254  256  258  260  262  274  288  302  304  317  330\n",
       "  347  361  374  392  407  419  438  454  484  501  529  548  575  595\n",
@@ -266,8 +295,12 @@
     }
    ],
    "source": [
-    "print(boundary_dofs)\n",
-    "print(c)"
+    "# degree of freedom indices\n",
+    "print(\"boundary_dofs is \\n\",boundary_dofs)\n",
+    "\n",
+    "# marked mesh entities indices\n",
+    "print(\"boundary_dofs1 is \\n\", boundary_dofs1)\n",
+    "print(\"locate_dofs is \\n\", c)"
    ]
   },
   {
