--- a/Tutorial/Fun_practice.ipynb
+++ b/Tutorial/Fun_practice.ipynb
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "2a233660-6cd9-4adc-9d31-841637c80946",
    "metadata": {},
    "outputs": [
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "e0c91608-b38b-4baf-ace1-2de407071a06",
    "metadata": {},
    "outputs": [
@@ -1524,24 +1524,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[array([ 3,  4,  6, 15, 91]), array([31, 42, 56,  1,  9])]\n",
       "[ 3  4  6 15 91 31 42 56  1  9]\n"
      ]
     }
    ],
    "source": [
     "E = [common_indices,  D]\n",
+    "print(E)\n",
     "E = np.concatenate(E)\n",
-    "\n",
     "print(E)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bb6c4a2e-3d3b-44df-bd03-42c7cf0d2b40",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3  4  6 15 91]\n"
+     ]
+    }
+   ],
+   "source": [
+    "C2= np.argsort(common_indices)\n",
+    "print(common_indices[C2])"
+   ]
   },
   {
    "cell_type": "code",
