Robin boundary condition is success

--- a/Tutorial/Fun_practice.ipynb
+++ b/Tutorial/Fun_practice.ipynb
@@ -1557,8 +1557,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4e47a9dc-adab-45f0-8b28-d5836e5dfd01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elements to delete from C: [1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_elements_to_delete(A, C):\n",
+    "    # elements_to_delete is B, A is less one, C is large, delete A in C\n",
+    "    B = []\n",
+    "    # Iterate through each element in A1\n",
+    "    for element in A:\n",
+    "        temp_C = C[:]\n",
+    "        temp_C.remove(element)       \n",
+    "        B.append(element)    \n",
+    "    return B\n",
+    "\n",
+    "# Example usage\n",
+    "A = [1, 2, 3]\n",
+    "C = [1, 2, 3, 4, 5]\n",
+    "result = find_elements_to_delete(A, C)\n",
+    "print(\"Elements to delete from C:\", result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2c6572b-095d-437b-a8e7-937991cc4012",
    "metadata": {},
    "outputs": [],
    "source": []
