new file name with total element

--- a/Tutorial/Calculation/Disc3_Neumann.ipynb
+++ b/Tutorial/Calculation/Disc3_Neumann.ipynb
@@ -142,17 +142,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Info    : Reading '3-10.msh'...\n",
+      "Info    : Reading 'mesh-3-10.msh'...\n",
       "Info    : 168 entities\n",
       "Info    : 10751 nodes\n",
       "Info    : 43604 elements\n",
-      "Info    : Done reading '3-10.msh'\n"
+      "Info    : Done reading 'mesh-3-10.msh'\n"
      ]
     }
    ],
    "source": [
     "# mesh\n",
-    "filename = \"3-10\" \n",
+    "filename = \"mesh-3-10\" \n",
     "domain, cell_markers, facet_markers = gmshio.read_from_msh(filename+\".msh\", MPI.COMM_WORLD, 0, gdim=3)\n",
     "\n",
     "# Define variational problem, Here Lagrange changes to CG, what is CG?\n",
@@ -180,7 +180,44 @@
     "## bc_disc is zero, no any dirichlete boundary condition\n",
     "bc_disc = mesh.locate_entities_boundary(\n",
     "    domain, fdim , lambda x:  np.isclose(x[2], 50) )\n",
-    "bc = fem.dirichletbc(PETSc.ScalarType(Tm), fem.locate_dofs_topological(V, fdim, bc_disc), V)"
+    "bc = fem.dirichletbc(PETSc.ScalarType(Tm), fem.locate_dofs_topological(V, fdim, bc_disc), V)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Info    : Reading 'mesh-3-10.msh'...\n",
+      "Info    : 168 entities\n",
+      "Info    : 10751 nodes\n",
+      "Info    : 43604 elements\n",
+      "Info    : Done reading 'mesh-3-10.msh'\n",
+      "37654\n",
+      "<dolfinx.mesh.MeshTags object at 0x76e7572a28f0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#mesh.num_entities(domain,3)\n",
+    "output_data = gmshio.read_from_msh(filename+\".msh\", MPI.COMM_WORLD, 0, gdim=3)\n",
+    "print( len(T_init.x.array) )\n",
+    "print( (cell_markers) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boundary200= (0, lambda x: x <= 100000)\n",
+    "  "
    ]
   },
   {
