--- a/Tutorial/Fun_practice.ipynb
+++ b/Tutorial/Fun_practice.ipynb
@@ -1589,8 +1589,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e2c6572b-095d-437b-a8e7-937991cc4012",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-01-01      NaN\n",
+      "2022-01-02      NaN\n",
+      "2022-01-03      NaN\n",
+      "2022-01-04    22.25\n",
+      "2022-01-05    23.50\n",
+      "2022-01-06    23.25\n",
+      "2022-01-07    17.25\n",
+      "2022-01-08    17.00\n",
+      "2022-01-09    16.50\n",
+      "2022-01-10    17.25\n",
+      "Freq: D, Name: Temperature, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample temperature data\n",
+    "temperature_data = [20, 22, 24, 23, 25, 21, 0, 22, 23, 24]\n",
+    "\n",
+    "# Create a DataFrame with time index\n",
+    "time_index = pd.date_range(start='2022-01-01', periods=len(temperature_data), freq='D')\n",
+    "df = pd.DataFrame({'Temperature': temperature_data}, index=time_index)\n",
+    "\n",
+    "# Calculate the rolling mean with a window size of 3\n",
+    "rolling_mean = df['Temperature'].rolling(window=4,min_periods=4).mean()\n",
+    "\n",
+    "# Print the DataFrame with rolling mean\n",
+    "print(rolling_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6973b9c0-8349-4753-9e26-fa759893debf",
    "metadata": {},
    "outputs": [],
    "source": []
