time step update

--- a/Projecct/Data/time-step/time-step.ipynb
+++ b/Projecct/Data/time-step/time-step.ipynb
@@ -78,13 +78,43 @@
     "plt.title('Temperatures with different time steps')\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
+    "\n",
+    "plt.savefig('time_step.png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b193b9b5-762f-4844-8086-e9df7818ffb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97a5538a-6b16-4eff-9618-fee16ba04853",
    "metadata": {},
    "outputs": [],
    "source": []
