--- a/Tutorial/Fun_practice.ipynb
+++ b/Tutorial/Fun_practice.ipynb
@@ -1002,6 +1002,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "1d8d8563-95a1-4134-bba8-62ac4cc5dbc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-222.34513501] [-97.88692934]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([26.4])\n",
+    "y = np.array([241.5])\n",
+    "\n",
+    "# Define the rotation angle in radians (1 radian per second)\n",
+    "rotation_degree = 120\n",
+    "rotation_radian = rotation_degree / 360 * 2 * np.pi\n",
+    "angle = rotation_radian  # 1 radian\n",
+    "\n",
+    "# Define the rotation matrix\n",
+    "r_matrix = np.array([[np.cos(angle), -np.sin(angle)],\n",
+    "                    [np.sin(angle), np.cos(angle)]])\n",
+    "\n",
+    "# Stack x and y into a single array of shape (2, n) where n is the number of points\n",
+    "points = np.vstack((x, y))\n",
+    "\n",
+    "# Perform the rotation\n",
+    "r_points = r_matrix @ points\n",
+    "\n",
+    "# Separate the rotated x and y coordinates\n",
+    "r_x = r_points[0, :]\n",
+    "r_y = r_points[1, :]\n",
+    "print(r_x,r_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "72f88973-b806-44a6-905c-c3c64f622aac",
    "metadata": {},
